# HubMarket

./: .gitignore
lib/: Dictionary.hpp  Timer.cpp
lib/network/: HTTP.cpp  HTTP.hpp  HTTPRequests.cpp  HTTPServer.cpp  HTTPServer.hpp  ServerSessionData.cpp  ServerSessionData.hpp  TCPClient.cpp  TCPServer.cpp  TCPServer.hpp  URL.cpp  URL.hpp
server/: CMakeLists.txt  GenerateModule.bat  GenerateProject.bat
server/source/: main.cpp  test.txt
server/source/network/: Address.cpp  HTTP.cpp  HTTP.hpp  HTTPServer.cpp  HTTPServer.hpp  URL.cpp  URL.hpp
